# orion

./: CMakeLists.txt  package.xml
drive/: CMakeLists.txt  drive_hardware_plugin.xml  package.xml
drive/config/: drive_hardware.yaml
drive/launch/: drive_controllers.launch.py
drive/src/: drive_hardware_interface.cpp  drive_hardware_interface.hpp
launch/: rsp.launch.py
localization/: package.xml
orion_bringup/: CMakeLists.txt  package.xml
orion_bringup/config/: diff_drive_controller.yaml  gz_bridge.yaml  joystick.yaml
orion_bringup/launch/: bringup.launch.py  orion_bringup.launch.py  orion_sim.launch.py  rsp.launch.py  sim.launch.py
orion_description/: CMakeLists.txt  package.xml
orion_description/urdf/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_properties.urdf.xacro  ros2_control.xacro
orion_joy/: CMakeLists.txt  package.xml
orion_joy/launch/: joystick.launch.py
orion_simulation/: CMakeLists.txt  package.xml
orion_simulation/config/: controller.yaml  diff_drive_controller.yaml
orion_simulation/description/urdf/: diff_wheels.urdf.xacro  gazebo_control.xacro  inertia.urdf.xacro  robot.urdf.xacro  robot_properties.urdf.xacro  ros2_control.xacro  wheel.urdf.xacro
orion_simulation/launch/: control_launch.py  rsp.launch.py  sim.launch.py  sim_launch.py
orion_simulation/worlds/: empty.world
